[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
edition = "2018"
description = "SAFE Authenticator"
documentation = "https://docs.rs/safe_authenticator"
homepage = "https://maidsafe.net"
license = "GPL-3.0"
name = "safe_authenticator"
readme = "README.md"
repository = "https://github.com/maidsafe/safe_client_libs"
version = "0.17.1"

[dependencies]
async-trait = "~0.1.30"
bincode = "1.2.1"
ffi_utils = "~0.17.0"
futures = "~0.3.5"
futures-util = "~0.3.4"
jni = { version = "~0.12.0", optional = true }
log = "~0.4.1"
lru-cache = "~0.1.1"
rand = "~0.7.3"
safe_core = { path = "../safe_core", version = "~0.42.1" }
safe-nd = "~0.10.1"
serde = { version = "1.0.97", features = ["derive"] }
threshold_crypto = "0.4.0"
tiny-keccak = "1.5.0"
tokio = { version="~0.2.21", features=["rt-core", "rt-util"] }
unwrap = "1.2.0"
env_logger = { version = "~0.6.2", optional = true }
xor_name = "1"

[features]
mock-network = ["testing", "safe_core/mock-network", "simulated-payouts"]
simulated-payouts = ["safe-nd/simulated-payouts", "safe_core/simulated-payouts"]
testing = ["safe_core/testing", "env_logger", "simulated-payouts"]
