[package]
name = "safe_authenticator_jni"
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "SAFE Authenticator JNI wrapper"
homepage = "https://maidsafe.net"
license = "GPL-3.0"
repository = "https://github.com/maidsafe/safe_client_libs"
version = "0.1.0"

[dependencies]
ffi_utils = { version = "~0.11.0", features = ["java"] }
jni = "~0.10.2"
log = "~0.4.5"
safe_core = { path = "../safe_core", version = "~0.32.0" }
unwrap = "~1.2.0"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "~0.6.0"

[dependencies.safe_authenticator]
path = "../safe_authenticator"
version = "~0.9.0"
features = ["bindings"]

[lib]
crate_type = ["cdylib"]

[features]
use-mock-routing = ["testing", "safe_core/use-mock-routing", "safe_authenticator/use-mock-routing"]
testing = ["safe_core/testing", "safe_authenticator/testing"]
