[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "SAFE Authenticator JNI wrapper"
edition = "2018"
homepage = "https://maidsafe.net"
license = "GPL-3.0"
name = "safe_authenticator_jni"
repository = "https://github.com/maidsafe/safe_client_libs"
version = "0.1.1"

[dependencies]
ffi_utils = { version = "~0.16.0", features = ["java"] }
jni = "~0.12.0"
log = "~0.4.5"
safe_authenticator_ffi = { path = "../safe_authenticator_ffi", version = "~0.14.0", features = ["bindings"] }
safe_core = { path = "../safe_core", version = "~0.39.0" }
unwrap = "~1.2.0"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "~0.6.0"

[lib]
crate_type = ["cdylib"]

[features]
mock-network = ["testing", "safe_core/mock-network", "safe_authenticator_ffi/mock-network"]
testing = ["safe_core/testing", "safe_authenticator_ffi/testing"]
