[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "SAFE core"
documentation = "https://docs.rs/safe_core"
edition = "2018"
homepage = "https://maidsafe.net"
license = "GPL-3.0"
name = "safe_core"
readme = "README.md"
repository = "https://github.com/maidsafe/safe_client_libs"
version = "0.35.0"

[dependencies]
bincode = "~1.1.4"
bytes = { version = "~0.4.12", features = ["serde"] }
chrono = { version = "~0.4.0", features = ["serde"] }
crossbeam-channel = "~0.3.9"
data-encoding = "~2.1.1"
directories = "~2.0.2"
ffi_utils = "~0.12.0"
fs2 = "~0.4.3"
futures = "~0.1.17"
env_logger = "~0.6.2"
lazy_static = "~1.2.0"
log = "~0.4.8"
log4rs = { version = "~0.8.3", features = ["toml_format"] }
lru-cache = "~0.1.1"
new_rand = { package = "rand", version = "0.6" }
quic-p2p = "~0.3.0"
rand = "~0.3.18"
rust_sodium = "~0.10.2"
regex = "~1.3.1"
safe-nd = "~0.4.0"
self_encryption = "~0.15.0"
serde = { version = "~1.0.97", features = ["derive"] }
serde_json = "~1.0.40"
serde-value = "~0.5.3"
tiny-keccak = "~1.5.0"
threshold_crypto = "~0.3.2"
tokio = "~0.1.22"
unwrap = "~1.2.0"
url = "~2.1.0"
ws = "~0.9.1"

[dev-dependencies]
serde_json = "~1.0.9"
tempfile = "3.1.0"

[features]
mock-network = []
testing = []
