[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "SAFE core"
documentation = "https://docs.rs/safe_core"
edition = "2018"
homepage = "https://maidsafe.net"
license = "GPL-3.0"
name = "safe_core"
readme = "README.md"
repository = "https://github.com/maidsafe/safe_client_libs"
version = "0.41.3"

[dependencies]
async-trait = "~0.1.30"
bincode = "~1.1.4"
bytes = { version = "~0.5.4", features = ["serde"] }
chrono = { version = "~0.4.0", features = ["serde"] }
crossbeam-channel = "~0.4.2"
data-encoding = "~2.1.1"
directories = "~2.0.2"
ffi_utils = "~0.16.0"
fs2 = "~0.4.3"
futures = "~0.3.5"
futures-util = "~0.3.4"
env_logger = "~0.6.2"
lazy_static = "~1.4.0"
log = "~0.4.8"
log4rs = { version = "~0.8.3", features = ["toml_format"] }
lru-cache = "~0.1.1"
miscreant = { version = "0.4.2", features = ["soft-aes"] }
pbkdf2 = { version = "0.3.0", default-features = false }
quic-p2p = "~0.6.2"
rand = "0.6"
regex = "~1.3.1"
safe-nd = "~0.9.0"
self_encryption = "~0.17.0"
serde = { version = "~1.0.97", features = ["derive", "rc"] }
serde_json = "~1.0.40"
serde-value = "~0.5.3"
hmac = "0.7.1"
sha3 = "0.8.2"
tiny-keccak = "~1.5.0"
threshold_crypto = "~0.3.2"
tokio = { version="~0.2.21", features=["rt-core", "blocking", "stream", "rt-util"] }
unwrap = "~1.2.0"
url = "~2.1.0"
ws = "~0.9.1"

[dev-dependencies]
serde_json = "~1.0.9"
tempfile = "3.1.0"

[features]
mock-network = []
testing = []
