[package]
name = "safenode"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
homepage = "https://maidsafe.net"

# [[bin]]
# name = "safenode"
# path = "src/bin/safenode.rs"

[[bin]]
name = "safenode"
path = "src/bin/kadnode.rs"

[dependencies]
async-trait = "0.1"
async-std = { version="1.12.0", features = ["attributes"]}
bytes = { version = "1.0.1", features = ["serde"] }
custom_debug = "~0.5.0"
futures = "~0.3.13"
hex = "~0.4.3"
serde = {version = "1.0.133", features = [ "derive", "rc" ]}
serde_json = "1.0.94"
thiserror = "1.0.23"
tokio = { version = "1.17.0", features = ["fs", "io-util", "macros", "rt", "time", "sync", "parking_lot"] }
tracing = { version = "~0.1.26" }
tracing-subscriber = "0.3.16"
tracing-appender = "~0.2.0"
tracing-core = "0.1.30"
walkdir = "2.3.1"
file-rotate = "0.7.3"
libp2p = { version="0.51", features = ["async-std", "dns", "quic", "kad", "mdns", "mplex", "noise", "macros", "tcp", "websocket", "yamux", "request-response"] }
libp2p-quic = { version = "0.7.0-alpha.3", features = ["async-std"] }
eyre = "0.6.8"
xor_name = "5.0.0"
clap = { version = "4.2.1", features = ["derive"]}
assert_fs = "1.0.12"
