[package]
name = "safenode"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
homepage = "https://maidsafe.net"

[[bin]]
name = "safenode"
path = "src/bin/kadnode.rs"

[dependencies]
assert_fs = "1.0.12"
async-trait = "0.1"
async-std = { version="1.12.0", features = ["attributes"]}
bytes = { version = "1.0.1", features = ["serde"] }
clap = { version = "4.2.1", features = ["derive"]}
custom_debug = "~0.5.0"
eyre = "0.6.8"
file-rotate = "0.7.3"
futures = "~0.3.13"
hex = "~0.4.3"
libp2p = { version="0.51", features = ["async-std", "dns", "kad", "macros", "mdns", "mplex", "noise", "quic", "request-response", "tcp", "websocket", "yamux",] }
libp2p-quic = { version = "0.7.0-alpha.3", features = ["async-std"] }
rmp-serde = "1.1.1"
serde = {version = "1.0.133", features = [ "derive", "rc" ]}
serde_json = "1.0.94"
thiserror = "1.0.23"
tokio = { version = "1.17.0", features = ["fs", "io-util", "macros", "parking_lot", "rt", "sync", "time"] }
tracing = { version = "~0.1.26" }
tracing-subscriber = {version= "0.3.16", features=["env-filter"]}
tracing-appender = "~0.2.0"
tracing-core = "0.1.30"
walkdir = "2.3.1"
xor_name = "5.0.0"
