[package]
name = "safenode"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
homepage = "https://maidsafe.net"

[[bin]]
name = "safenode"
path = "src/bin/kadnode.rs"

[[bin]]
name = "safe"
path = "src/bin/kadclient.rs"

[dependencies]
async-trait = "0.1"
bincode = "1.3.1"
bls = { package = "blsttc", version = "8.0.1" }
bytes = { version = "1.0.1", features = ["serde"] }
clap = { version = "4.2.1", features = ["derive"]}
clru = "~0.6.1"
crdts = { version = "7.3", default-features = false, features = ["merkle"] }
custom_debug = "~0.5.0"
eyre = "0.6.8"
file-rotate = "0.7.3"
futures = "~0.3.13"
hex = "~0.4.3"
libp2p = { version="0.51", features = ["tokio", "dns", "kad", "macros", "mdns", "quic", "request-response",] }
libp2p-quic = { version = "0.7.0-alpha.3", features = ["tokio"] }
rand = { version = "~0.8.5", features = ["small_rng"] }
rmp-serde = "1.1.1"
self_encryption = "~0.28.0"
serde = { version = "1.0.133", features = [ "derive", "rc" ]}
sn_dbc = { version = "15.0.0", features = ["serdes"] }
thiserror = "1.0.23"
tokio = { version = "1.17.0", features = ["fs", "io-util", "macros", "parking_lot", "rt", "sync", "time"] }
tracing = { version = "~0.1.26" }
tracing-subscriber = "0.3.16"
tracing-appender = "~0.2.0"
tracing-core = "0.1.30"
walkdir = "2.3.1"
xor_name = "5.0.0"

[dev-dependencies]
proptest = { version = "1.0.0" }
