[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "The Safe Network Core. API message definitions, routing and nodes, client core api."
documentation = "https://docs.rs/sn_node"
edition = "2021"
homepage = "https://maidsafe.net"
license = "GPL-3.0"
name = "safe_network"
readme = "README.md"
repository = "https://github.com/maidsafe/safe_network"
version = "0.58.0"

[[bench]]
name = "upload_bytes"
harness = false
required-features = ["test-utils"]

[[example]]
name = "client_files"
required-features = ["test-utils"]

[[example]]
name = "network_split"
required-features = ["test-utils"]

[[example]]
name = "routing_minimal"
required-features = ["test-utils"]

[[example]]
name = "routing_stress"
required-features = ["test-utils"]

[features]
default = []
chaos = []
unstable-wiremsg-debuginfo = []
test-utils = []
# Needs to be built with RUSTFLAGS="--cfg tokio_unstable"
tokio-console = ["console-subscriber"]

[dependencies]
base64 = "~0.10.1"
bincode = "1.3.1"
bls = { package = "blsttc", version = "3.1.0" }
bls_dkg = "0.9.0"
bytes = { version = "1.0.1", features = ["serde"] }
color-eyre = "0.5.11"
console-subscriber = { version = "0.1.0", optional = true }
crdts = "~7.0"
custom_debug = "0.5.0"
dashmap = {version = "5.1.0", features = [ "serde" ]}
dirs-next = "2.0.0"
ed25519 = { version = "1.2.0", features = ["serde_bytes"] }
ed25519-dalek = { version = "1.0.0", features = ["serde"] }
eyre = "0.6.5"
futures = "~0.3.13"
grep="~0.2.8"
hex = "~0.3.2"
hex_fmt = "~0.3.0"
itertools = "0.10.0"
lazy_static = "1"
multibase = "~0.8.0"
num_cpus = "1.13.0"
priority-queue = "1.2.1"
qp2p = "~0.28.0"
rand = "~0.7.3"
rayon = "1.5.1"
resource_proof = "0.8.0"
rmp-serde = "~0.15.4"
secured_linked_list = "~0.5.0"
self_encryption = "0.27.1"
serde = { version = "1.0.111", features = ["derive", "rc"] }
serde_bytes = "0.11.5"
serde_json = "1.0.53"
signature = "1.1.10"
sled = "0.34.6"
sn_launch_tool = "~0.9.5"
structopt = "~0.3.17"
strum = "0.21"
strum_macros = "0.21"
sysinfo = "0.19.0"
tempfile = "3.2.0"
thiserror = "1.0.23"
tiny-keccak = { version = "2.0.2", features = ["sha3"] }
tracing = "~0.1.26"
tracing-core = "0.1.21"
tracing-appender = "0.2.0"
tracing-subscriber = { version = "0.3.1", features = ["env-filter", "json"] }
uluru="~3.0.0"
url = "2.2.0"
walkdir = "2"
xor_name = "3.1.0"
file-rotate = "0.5.3"

[dependencies.backoff]
version = "0.3.0"
features = [ "tokio" ]

[dependencies.self_update]
version = "0.26.0"
default-features = false
features = ["archive-tar", "archive-zip", "compression-flate2", "compression-zip-deflate", "rustls"]

[dependencies.tokio]
version = "1.12.0"
features = ["fs", "io-util", "macros", "rt", "rt-multi-thread", "sync"]

[dev-dependencies]
assert_matches = "1.3"
criterion = { version = "0.3", features = ["async_tokio"] }
ctor = "0.1.20"
proptest = "0.10.1"
rand = { version = "0.7.3", features = ["small_rng"] }
rand_xorshift = "~0.2.0"
strum = "0.21"
strum_macros = "0.21"
termcolor="1.1.2"
tokio-util = { version = "0.6.7", features = ["time"] }
walkdir = "2"
yansi = "~0.5.0"
