[package]
name = "sn_api"
version = "0.64.2"
description = "Safe API"
authors = [
  "bochaco <gabrielviganotti@gmail.com>",
  "Josh Wilson <joshuef@gmail.com>"
]
license = "GPL-3.0"
repository = "https://github.com/maidsafe/sn_api"
include = [ "Cargo.toml", "src/*" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bincode = "1.3.3"
bls = { package = "blsttc", version = "5.2.0" }
bytes = { version = "1.0.1", features = ["serde"] }
color-eyre = "~0.6"
dirs-next = "2.0.0"
ed25519-dalek = { version = "1.0.1", features = ["serde"] }
env_logger = "~0.8"
futures = "~0.3"
hex = "~0.4"
hmac = "~0.10"
lazy_static = "1.4.0"
log = "~0.4"
mime_guess = "2.0.3"
multibase = "~0.9.1"
qjsonrpc = "0.4.0"
rand = "~0.8"
rand-07 = { package = "rand", version = "0.7.3", optional = true }
rand_core = "~0.5"
relative-path = "1.3.2"
rmp-serde = "1.0.0"
pbkdf2 = { version = "~0.7", default-features = false }
serde = "1.0.123"
serde_json = "1.0.62"
sha3 = "~0.9"
sn_client = { path = "../sn_client", version = "^0.66.2" }
sn_dbc = { version = "3.2.0", features = [ "serdes" ] }
sn_interface = { path = "../sn_interface", version = "^0.6.2" }
thiserror = "1.0.23"
time = { version = "~0.3.4", features = ["formatting"] }
tiny-keccak = { version = "2.0.2", features = ["sha3"] }
tracing = "~0.1.26"
tokio = { version = "1.6.0", features = ["rt"] }
uhttp_uri = "~0.5"
url = "2.2.0"
urlencoding = "1.1.1"
walkdir = "2.3.1"
xor_name = "4.0.1"

[features]
authenticator = [ "rand-07" ]
authd_client = [ ]
app = [ ]
testing = [ ]
default = [ "testing", "authenticator", "authd_client", "app" ]

[dev-dependencies]
assert_fs = "1.0"
assert_matches = "1.3"
anyhow = "1.0.38"
hex = "~0.4"
predicates = "2.0"
proptest = "1.0.0"
tokio = { version = "1.6.0", features = ["macros"] }
tracing-subscriber = "~0.3.1"
