[package]
name = "safe-authd"
version = "0.0.11"
description = "Safe Authenticator (daemon)"
authors = ["bochaco <gabrielviganotti@gmail.com>"]
publish = false
license = "MIT OR BSD-3-Clause"
repository = "https://github.com/maidsafe/sn_api"
edition = "2018"

[[bin]]
name = "safe-authd"
path = "main.rs"

[dependencies]
cluFlock = "1.2.5"
directories = "2.0.2"
flexi_logger = "~0.15.2"
futures = "~0.3.5"
human-panic = "1.0.1"
qjsonrpc = { path = "../qjsonrpc" }
log = "~0.4.8"
rcgen = "~0.7.0"
serde = "1.0.91"
serde_json = "1.0.41"
structopt = "~0.2.15"
tokio = { version = "~0.2.21", features = ["macros"] }
url = "2.1.1"
urlencoding = "1.0.0"
quinn = {version = "~0.6.1", features=["tls-rustls"], default-features = false}

[dependencies.sn_api]
path = "../sn_api"
default-features = false
features = ["authenticator", "authd_client"]

[dependencies.self_update]
version = "~0.15.0"
default-features = false
features = ["rustls", "archive-tar", "archive-zip", "compression-flate2", "compression-zip-deflate"]

[dev-dependencies]
unwrap = "1.2.1"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook","user-hooks"]
