[package]
name = "sn_authd"
version = "0.7.0"
description = "Safe Authenticator (daemon)"
authors = ["bochaco <gabrielviganotti@gmail.com>"]
publish = false
license = "MIT OR BSD-3-Clause"
repository = "https://github.com/maidsafe/sn_api"
edition = "2018"

[[bin]]
name = "sn_authd"
path = "main.rs"

[dependencies]
anyhow = "1.0.38"
cluFlock = "1.2.5"
dirs-next = "2.0.0"
flexi_logger = "~0.17"
futures = "~0.3"
human-panic = "1.0.3"
qjsonrpc = { path = "../qjsonrpc" }
log = "~0.4"
rcgen = "~0.7"
serde = "1.0.123"
serde_json = "1.0.62"
structopt = "~0.3"
tokio = { version = "1.3.0", features = ["macros"] }
url = "2.2.0"
urlencoding = "1.1.1"
quinn = {version = "~0.7", features=["tls-rustls"], default-features = false}

[dependencies.sn_api]
path = "../sn_api"
default-features = false
features = ["authenticator", "authd_client"]

[dependencies.self_update]
version = "~0.23"
default-features = false
features = ["rustls", "archive-tar", "archive-zip", "compression-flate2", "compression-zip-deflate"]
optional = true

[features]
default = ["simulated-payouts", "self-update"]
simulated-payouts = ["sn_api/simulated-payouts"]
self-update = ["self_update"]
