[package]
name = "sn_cli"
version = "0.51.2"
description = "Safe CLI"
authors = [
  "bochaco <gabrielviganotti@gmail.com>",
  "Josh Wilson <joshuef@gmail.com>"
]
license = "GPL-3.0"
default-run = "safe"
repository = "https://github.com/maidsafe/sn_cli"
edition = "2021"

[[bin]]
name = "safe"
path = "src/main.rs"

[dependencies]
ansi_term = "~0.12"
chrono = "~0.4"
color-eyre = "~0.6"
console = "~0.14"
dirs-next = "2.0.0"
hex = "~0.4"
human-panic = "1.0.3"
isatty = "~0.1"
num-traits = "~0.2"
percent-encoding = "2.1.0"
pretty-hex = "~0.2"
comfy-table = "5.0.1"
rand = "~0.7"
rcgen = "~0.7"
relative-path = "1.3.2"
sn_api = { path = "../sn_api", version = "^0.58.1", default-features=false, features = ["app", "authd_client"] }
sn_launch_tool = "~0.9.4"
serde = "1.0.123"
serde_json = "1.0.62"
serde_yaml = "~0.8"
structopt = "~0.3"
tracing = "~0.1.26"
tracing-subscriber = "~0.2.15"
url = "2.2.2"
xor_name = "4.0.1"

[dependencies.bls]
package = "blsttc"
version = "3.1.0"

[dependencies.bytes]
version = "1.0.1"
features = [ "serde" ]

[dependencies.ed25519-dalek]
version = "1.0.1"
features = [ "serde" ]

[dependencies.reqwest]
version = "~0.11"
default-features = false
features = [ "rustls-tls" ]

[dependencies.tokio]
version = "1.6.0"
features = [ "macros" ]

[dependencies.self_update]
version = "~0.28.0"
default-features = false
features = [
    "rustls",
    "archive-tar",
    "archive-zip",
    "compression-flate2",
    "compression-zip-deflate"
]

[features]
default = [ "testing", "self-update" ]
testing = [ "sn_api/testing" ]
self-update = []

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.0"
ctor = "~0.1"
duct = "~0.12"
predicates = "2.0"
criterion = "~0.3"
walkdir = "2.3.1"
multibase = "~0.9.1"
xor_name = "4.0.1"

[dev-dependencies.sn_cmd_test_utilities]
path = "../sn_cmd_test_utilities"

[[bench]]
name = "put"
harness = false

[[bench]]
name = "keys"
harness = false
