[package]
name = "sn_cli"
version = "0.66.0"
description = "Safe CLI"
authors = [
  "bochaco <gabrielviganotti@gmail.com>",
  "Josh Wilson <joshuef@gmail.com>"
]
license = "GPL-3.0"
default-run = "safe"
repository = "https://github.com/maidsafe/sn_cli"
edition = "2021"

[[bin]]
name = "safe"
path = "src/main.rs"

[dependencies]
ansi_term = "~0.12"
bincode = "1.3.3"
bls = { package = "blsttc", version = "7.0.0" }
bytes = { version = "1.0.1", features = ["serde"] }
chrono = "~0.4"
color-eyre = "~0.6"
comfy-table = "5.0.1"
console = "~0.14"
dirs-next = "2.0.0"
ed25519-dalek = { version = "1.0.1", features = ["serde"] }
hex = "~0.4"
human-panic = "1.0.3"
atty = "~0.2.14"
num-traits = "~0.2"
percent-encoding = "2.1.0"
pretty-hex = "~0.2"
rand = "~0.8"
rcgen = "~0.9"
relative-path = "1.3.2"
reqwest = { version = "~0.11", default-features = false, features = ["rustls-tls"] }
#rmp-serde = "1.0.0"
sn_api = { path = "../sn_api", version = "^0.73.0", default-features = false, features = ["app"] }
sn_dbc = { version = "8.0.0", features = ["serdes"] }
sn_launch_tool = "~0.12.0"
serde = "1.0.123"
serde_json = "1.0.62"
serde_yaml = "~0.8"
clap = { version = "3.0.0", features = ["derive", "env"] }
clap_complete = { version = "3.0.0" }
tokio = { version = "1.6.0", features = ["macros"] }
tempfile = "3.2.0"
tracing = "~0.1.26"
tracing-subscriber = "~0.2.15"
url = "2.2.2"
xor_name = "~5.0.0"

[dependencies.self_update]
version = "~0.28.0"
default-features = false
features = [
    "rustls",
    "archive-tar",
    "archive-zip",
    "compression-flate2",
    "compression-zip-deflate"
]

[features]
default = [ "self-update" ]
self-update = []

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.0"
ctor = "~0.1"
duct = "~0.13"
predicates = "2.0"
criterion = "~0.3"
walkdir = "2.3.1"
multibase = "~0.9.1"
xor_name = "~5.0.0"
futures = "0.3.21"
sn_api = { path = "../sn_api", version = "^0.73.0", features = ["app", "test-utils"] }
httpmock = "~0.6.6"

[dev-dependencies.sn_cmd_test_utilities]
path = "../sn_cmd_test_utilities"

[[bench]]
name = "files"
harness = false

[[bench]]
name = "keys"
harness = false
