[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "The Safe Network Client."
documentation = "https://docs.rs/sn_client"
edition = "2021"
homepage = "https://maidsafe.net"
license = "GPL-3.0"
name = "sn_client"
readme = "README.md"
repository = "https://github.com/maidsafe/safe_network"
version = "0.71.1"

[[bench]]
name = "upload_bytes"
harness = false

[[bench]]
name = "serialize"
harness = false

[[example]]
name = "client_files"

[[example]]
name = "network_split"

[[example]]
# is data retained over churn
name = "churn"

[[bin]]
name = "query-adult"
required-features = ["build-bin"]

[features]
default = ["traceroute"]
chaos = []
unstable-wiremsg-debuginfo = []
test-utils = ["eyre"]
traceroute = ["sn_interface/traceroute"]
# Dependencies only when building binary (`query-adult`)
build-bin = ["clap", "eyre"]

[dependencies]
backoff = { version = "~0.4.0", features = [ "tokio" ] }
base64 = "~0.13.0"
bincode = "1.3.1"
bls = { package = "blsttc", version = "7.0.0" }
bls_dkg = "~0.10.5"
bytes = { version = "1.0.1", features = ["serde"] }
clap = { version = "3.0.0", features = ["derive"], optional = true }
crdts = { version = "7.2", default-features = false, features = ["merkle"] }
custom_debug = "~0.5.0"
dashmap = { version = "5.1.0", features = [ "serde" ] }
dirs-next = "2.0.0"
ed25519 = { version = "1.2.0", features = ["serde_bytes"] }
ed25519-dalek = { version = "1.0.0", features = ["serde"] }
eyre = { version = "~0.6.5", optional = true }
futures = "~0.3.13"
hex = "~0.4.3"
hex_fmt = "~0.3.0"
itertools = "~0.10.0"
lazy_static = "1"
multibase = "~0.9.1"
num_cpus = "1.13.0"
priority-queue = "1.2.1"
qp2p = {git="https://github.com/joshuef/qp2p", branch="Feat-RepresentativeUserMsg"}
# qp2p = "~0.28.3"
rand = "~0.8.5"
rayon = "1.5.1"
rmp-serde = "1.0.0"
secured_linked_list = "~0.5.3"
self_encryption = "~0.27.5"
serde = { version = "1.0.111", features = ["derive", "rc"] }
serde_bytes = "~0.11.5"
serde_json = "1.0.53"
signature = "1.1.10"
sn_dbc = { version = "8.0.0", features = ["serdes"] }
sn_interface = { path = "../sn_interface", version = "^0.10.2" }
strum = "~0.23.0"
strum_macros = "~0.23.1"
tempfile = "3.2.0"
thiserror = "1.0.23"
tracing = "~0.1.26"
tracing-core = "~0.1.21"
tracing-subscriber = { version = "0.3.1", features = ["env-filter", "json"] }
uluru = "3.0.0"
url = "2.2.0"
walkdir = "2"
xor_name = "~5.0.0"

[dependencies.tokio]
version = "1.17.0"
features = ["fs", "io-util", "macros", "rt", "rt-multi-thread", "sync"]

[dev-dependencies]
clap = { version = "3.0.0", features = ["derive", "env"] }
criterion = { version = "~0.3", features = ["async_tokio"] }
eyre = "~0.6.5"
grep="~0.2.8"
proptest = "1.0.0"
rand = { version = "~0.8.5", features = ["small_rng"] }
rand_xorshift = "~0.2.0"
sn_launch_tool = "~0.12.0"
termcolor="1.1.2"
tiny-keccak = { version = "2.0.2", features = ["sha3"] }
tokio-util = { version = "~0.6.7", features = ["time"] }
walkdir = "2"
sn_interface = { path = "../sn_interface", version = "^0.10.2", features= ["test-utils"] }

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-clippy", "run-cargo-fmt"]

[package.metadata.cargo-udeps.ignore]
development = ["cargo-husky"]
