[package]
name = "sn_cmd_test_utilities"
version = "1.1.0"
description = "Safe CLI Test Utilities"
authors = ["bochaco <gabrielviganotti@gmail.com>", "Josh Wilson <joshuef@gmail.com>"]
publish = false
license = "GPL-3.0"
repository = "https://github.com/maidsafe/safe_network/sn_cmd_test_utilities"
edition = "2021"

[dependencies]
assert_cmd = "2.0"
color-eyre = "~0.6"
ctor = "~0.1"
dirs-next = "2.0.0"
rand = "~0.8"
serde = "1.0.123"
serde_json = "1.0.62"
sn_api = { path = "../sn_api", version = "^0.62.0", default-features=false, features = ["app", "authd_client"] }
walkdir = "2.3.1"
multibase = "~0.9.1"

[dependencies.reqwest]
version = "~0.11"
default-features = false
features = [ "rustls-tls" ]

[dependencies.tiny-keccak]
version = "2.0.2"
features = [ "sha3" ]
