[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "The Safe Network Node Comms."
documentation = "https://docs.rs/sn_node"
edition = "2021"
homepage = "https://maidsafe.net"
license = "GPL-3.0"
name = "sn_comms"
readme = "README.md"
repository = "https://github.com/maidsafe/safe_network"
version = "0.6.0"

[features]
default = []
test = []

[dependencies]
custom_debug = "~0.5.0"
dashmap = {version = "5.1.0", features = [ "serde" ]}
futures = "~0.3.13"
qp2p = "0.36.1"
sn_interface = { path = "../sn_interface", version = "^0.20.0" }
thiserror = "1.0.23"
tokio = { version = "1.0.23", features = [ "sync" ] }
tracing = "~0.1.26"
xor_name = "~5.0.0"

[dev-dependencies]
eyre = "~0.6.5"
assert_matches = "1.3"
bls = { package = "blsttc", version = "8.0.1" }
futures = "~0.3.13"
proptest = "~1.0.0"
tokio = { version = "1.17.0", features = [ "macros", "rt-multi-thread", "sync" ] }
