[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "The Safe Network Node Dysfunctional Detection."
documentation = "https://docs.rs/sn_node"
edition = "2021"
homepage = "https://maidsafe.net"
license = "GPL-3.0"
name = "sn_dysfunction"
readme = "README.md"
repository = "https://github.com/maidsafe/safe_network"
version = "0.1.3"

[features]
default = []

[dependencies]
dashmap = { version = "5.1.0", features = [ "serde" ] }
eyre = "~0.6.5"
rand = "~0.8"
thiserror = "1.0.23"
tokio = { version = "1.0.23", features = [ "sync" ] }
tracing = "~0.1.26"
xor_name = "4.0.1"
sn_interface = { path = "../sn_interface", version = "^0.2.4" }

[dev-dependencies]
proptest = "~1.0.0"
tokio = { version = "1.17.0", features = [ "macros", "rt-multi-thread", "sync" ] }
tracing-subscriber = { version = "0.3.1", features = ["env-filter", "json"] }
