[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "The Safe Network Node Fault Detection."
documentation = "https://docs.rs/sn_node"
edition = "2021"
homepage = "https://maidsafe.net"
license = "GPL-3.0"
name = "sn_fault_detection"
readme = "README.md"
repository = "https://github.com/maidsafe/safe_network"
version = "0.15.0"

[features]
default = []

[dependencies]
eyre = "~0.6.5"
rand = "~0.8"
tokio = { version = "1.0.23", features = [ "sync" ] }
tracing = "~0.1.26"
xor_name = "~5.0.0"
itertools = "~0.10.0"

[dev-dependencies]
proptest = "~1.0.0"
tokio = { version = "1.17.0", features = [ "macros", "rt-multi-thread", "sync" ] }
tracing-subscriber = { version = "0.3.1", features = ["env-filter", "json"] }
